Fri Dec 15 15:51:58 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/OTriangle.java (canContract): Fix
	topology check.

Wed Dec 13 07:59:35 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/QSortedTree.java
	  src/org/jcae/mesh/amibe/util/QSortedTreeNode.java: Abstract classes
	to define binary trees.
	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: Use these new classes.
	* src/org/jcae/mesh/amibe/util/PRedBlackSortedTree.java: New class,
	red-black tree.

Tue Dec 12 13:15:57 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: Update balance
	factors in rotateL() and rotateR() to improve readability.

Mon Dec 11 13:25:29 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: Fix nextApexLoop().

Tue Dec  5 17:53:09 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/OTriangle.java: Modify hasAttributes()
	methods so that hasAttributes(FOO|BAR) is equivalent to
	hasAttributes(FOO) || hasAttributes(BAR), this is more natural than
	current behaviour: hasAttributes(FOO) && hasAttributes(BAR).

Fri Dec  1 13:05:28 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: New outerVertex member,
	which will replace Vertex.outer.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: nextOriginLoop() and
	nextApexLoop() can check OUTER attributes
	* src/org/jcae/mesh/amibe/ds/Mesh.java: Remove useless members:
	type, scaleX, scaleY.

Thu Nov 30 17:03:16 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: Nex isEmpty()
	method. Replace first(), last(), next() and prev() by iterator()
	and backwardIterator();

Tue Nov 28 13:27:28 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
